# attention-architectures

./: README.md
gpt/: README.md  pyproject.toml
gpt/gpt/: gpt_config.py  modeling.py  toy_training.py
nn/: README.md  c_cpp_properties.json  linear_regression  tasks.json  test_program
nn/src/: linear_regression.c  test_program.c
reformer/: README.md  pyproject.toml
reformer/reformer/: modeling.py
transfomer/: README.md  pyproject.toml
transfomer/transfomer/: attn.py  decoder.py  decoding.py  encoder.py  encoding.py  model.py  modeling.py  positional_encoding.py  toy_training.py  word_table_embedding.py
