[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Wian Stipp <stippwian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
transformers = "^4.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
