[tool.poetry]
name = "transfomer"
version = "0.1.0"
description = ""
authors = ["Wian Stipp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
tiktoken = "^0.1.2"
datasets = "^2.8.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
